--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
-        "jquery": "^3.5.1",
-        "webpack-dev-server": "^3.11.2"
+        "jquery": "^3.5.1"
     },
     "devDependencies": {
         "bootstrap": "^4.6.0",
@@ -16,10 +15,13 @@
         "sass-loader": "^10.1.1",
         "style-loader": "^2.0.0",
         "webpack": "^5.19.0",
-        "webpack-cli": "^4.4.0"
+        "webpack-cli": "^4.4.0",
+        "webpack-dev-server": "^3.11.2",
+        "webpack-merge": "^5.7.3"
     },
     "scripts": {
-        "start": "webpack --config webpack.config.js"
+        "start": "webpack serve --config webpack.dev.js --open",
+        "build": "webpack --config webpack.prod.js"
     },
     "repository": {
         "type": "git",
