--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     },
     "devDependencies": {
         "bootstrap": "^4.6.0",
+        "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.1",
+        "file-loader": "^6.2.0",
+        "html-loader": "^1.3.2",
         "html-webpack-plugin": "^4.5.1",
         "node-sass": "^4.14.1",
         "sass-loader": "^10.1.1",
