--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "private": true,
     "description": "",
     "main": "index.js",
-    "dependencies": {
-        "jquery": "^3.5.1"
-    },
+    "dependencies": {},
     "devDependencies": {
         "bootstrap": "^4.6.0",
         "clean-webpack-plugin": "^3.0.0",
@@ -14,7 +12,9 @@
         "file-loader": "^6.2.0",
         "html-loader": "^1.3.2",
         "html-webpack-plugin": "^4.5.1",
+        "jquery": "^3.5.1",
         "node-sass": "^4.14.1",
+        "popper.js": "^1.16.1",
         "sass-loader": "^10.1.1",
         "style-loader": "^2.0.0",
         "webpack": "^5.19.0",
